--- a/.github/workflows/sync_fork.yml
+++ b/.github/workflows/sync_fork.yml
@@ -2,7 +2,7 @@ name: Sync Fork
 
 on:
   schedule:
-    - cron: '0 */6 * * *' # 每30分钟运行一次
+    - cron: '*/30 * * * *' # 每30分钟运行一次
   workflow_dispatch: # 允许手动触发
 
 jobs:
@@ -16,4 +16,3 @@ jobs:
           base: main        # 上游仓库的基础分支
           head: main        # 你的 fork 仓库的头部分支
           token: ${{ secrets.PERSONAL_TOKEN }} # 必须使用具有 repo/public_repo 权限的 PAT
-          merge_method: rebase                # 使用 rebase 方式，使历史更接近上游
